# pyqudt

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
qudt/: Quantity.py  Unit.py  __init__.py  model.py  multiplier.py  quantity.py  unit.py
qudt/contrib/: meta.py  models.py
qudt/ontology/: OntologyUtils.py  QUDT.py  RDF.py  RDFS.py  UnitFactory.py  __init__.py  ontology_reader.py  ontology_utils.py  ops.py  qudt.py  rdf.py  rdfs.py  unit.py  unit_factory.py
qudt/ontology/resources/: contrib.jsonld  openphacts.jsonld  quantity  qudt.jsonld  qudt.rdf  unit  unit.jsonld
qudt/ontology/resources/v2_1_4/: SCHEMA_QUDT-SCIENCE-v2.0.ttl  (+1 more)
qudt/schemas/: context.jsonld
qudt/units/: AreaUnit.py  ConcentrationUnit.py  CountingUnit.py  EnergyUnit.py  LengthUnit.py  MassUnit.py  TemperatureUnit.py  VolumeUnit.py  __init__.py  area.py  concentration.py  counting.py  dimensionless.py  energy.py  information.py  length.py  mass.py  quantity_kind.py  temperature.py  time.py  volume.py
qudt/uo/: UnitOntologyFactory.py  __init__.py  unit_ontology_factory.py
test/: __init__.py  multiplier_test.py  quantity_test.py  unit_test.py
test/ontology/: OntologyReaderTest.py  UnitFactoryTest.py  __init__.py  ontology_reader_test.py  ontology_utils_test.py  qudt_test.py  unit_factory_test.py
test/units/: LengthUnitTest.py  TimeUnitTest.py  __init__.py  energy_unit_test.py  length_unit_test.py  time_unit_test.py
test/units/area/: SquareAreaTest.py  __init__.py  square_area_test.py
test/units/concentration/: MolarTest.py  NanomolarTest.py  __init__.py  mass_per_volume_unit_test.py  molar_test.py  nanomolar_test.py
test/units/temperature/: CelsiusTest.py  FahrenheitTest.py  celsius_test.py  fahrenheit_test.py
test/uo/: UnitOntologyFactoryTest.py  __init__.py  unit_ontology_factory_test.py
tests/: MultiplierTest.py  QuantityTest.py  UnitTest.py
tests/ontology/: OntologyUtilsTest.py  QUDTTest.py  UnitFactoryTest.py  __init__.py
tests/units/: EnergyUnitTest.py  __init__.py
tests/units/concentration/: MassPerVolumeUnitTest.py
tests/units/temperature/: __init__.py
tests/uo/: UnitOntologyFactoryTest.py  __init__.py
