[build-system]

# Minimum requirements for the build system to execute
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]

line-length = 88

skip-string-normalization = true

[tool.flake8]

# TODO: flake8 doesn't support pyproject.toml, maybe use flakehell or dephell?

[tool.isort]

# Use single line imports for cleaner git history and fewer black conflicts
force_single_line = true

# Includes a trailing comma on multi line imports that include parentheses
include_trailing_comma = true

# Removing double lines conflicts with black
lines_after_imports = 2

lines_between_types = 1

# Base profile type to use for configuration. Profiles include: black,
# django, pycharm, google, open_stack, plone, attrs, hug, wemake, appnexus.
profile = "black"

# Use parentheses for line continuation on length limit instead of slashes
use_parentheses = true

[tool.poetry]

name = "pyqudt"
description = "Python library for working with the QUDT (Quantity, Unit, Dimension and Type) ontology."
version = "1.1.1"
authors = ["Garrett Brown"]
license = "BSD-3-Clause"

# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

packages = [
    { include = "qudt" },
]

[tool.poetry.dependencies]

# Python version is managed by tox
python = ">=3.7,<4.0"
PyLD = "^2.0.3"
rdflib = "^6.0.1"

[tool.poetry.dev-dependencies]

black = "^21.9b0"
flake8 = "^3.9.2"
flake8-blind-except = "^0.2.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.6.1"
flake8-deprecated = "^1.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-logging-format = "^0.6.0"
flake8-quotes = "^3.3.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
